# mailassist

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  workflow.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260424_initial_schema.py  20260501_fix_notif_mode.py  20260501_fix_notification_approval_mode.py  20260502_add_cancelled_reason.py  20260502_add_plugin_results.py
backend/app/: __init__.py  main.py
backend/app/api/: ai_providers.py  approvals.py  auth.py  auto_replies.py  calendar.py  calendar_events.py  changelog.py  contacts.py  coupons.py  dashboard.py  deps.py  folders.py  health.py  labels.py  mail_accounts.py  newsletters.py  notifications.py  pipeline.py  prompts.py  queue.py  rules.py  settings.py  spam.py  summaries.py
backend/app/core/: config.py  constants.py  database.py  events.py  exceptions.py  middleware.py  redis.py  security.py  templating.py  types.py
backend/app/models/: __init__.py  ai.py  base.py  contacts.py  mail.py  notifications.py  reprocessing.py  rules.py  spam.py  user.py
backend/app/plugins/: __init__.py  auto_reply.py  base.py  calendar_extraction.py  contacts.py  coupon_extraction.py  email_summary.py  labeling.py  newsletter_detection.py  notifications.py  registry.py  rules.py  smart_folder.py  spam_detection.py
backend/app/schemas/: ai_provider.py  applied_label.py  approval.py  assigned_folder.py  auto_reply.py  calendar.py  calendar_event.py  contacts.py  coupon.py  dashboard.py  mail_account.py  newsletter.py  notification.py  pipeline.py  prompt.py  queue.py  rules.py  settings.py  spam.py  summary.py
backend/app/services/: __init__.py  ai.py  calendar.py  change_logger.py  dav_discovery.py  draft_cleanup.py  email_parser.py  header_analysis.py  imap_actions.py  mail.py  notifications.py  persistence.py  rules.py  (+4 more)
backend/tests/: conftest.py
(+512 files in other folders)
